Fixed word wrapping to the next line

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1{
 .title{
     font-weight: bold;
     margin-bottom: 0.6rem;
+    white-space: nowrap;
 }
 .inputContainer{
     background-color:  #353959;
@@ -95,3 +96,4 @@ h1{
     text-align: center;
     font-size: 2.5rem;
 }
+
